--- a/Twitter-login/css/style.css
+++ b/Twitter-login/css/style.css
@@ -1,49 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
-    background-color: #000000;
     color: white;
 }
-main{
-    display: flex;
+body{
+    font-family: 'Rubik', sans-serif;
 }
-.left-section{
-
-  width: 55%;
-  height: 90vh;
-  background-image:url(/Twitter-login/left-img.png);
-}
-.right-one{
-    padding: 20px;
-}
-.right-one img {
-    padding: 20px;
-    width: 40px;
-    height: 40px;
-    margin-bottom: 56px;
-    margin-top: 45px;
-}
-.right-one span{
-    color: #d9d9d9;
-}
-.right-one #head{
-    font-family: TwitterChirpExtendedHeavy, Verdana, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    font-weight: 700;
-    font-size: 64px;
-    line-height: 84px;
-   display:flexbox;
-   padding: 20px;
-   
-}
-
-
-
-
-
-
-
-
-
-
-
-
